--- a/templates/show.html
+++ b/templates/show.html
@@ -1,15 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
-{% if current_user.is_authenticated %} {# ログインしている場合に表示 #}
-<h2>Create</h2>
-<form action="{{ url_for('index') }}" method="post">
-    <div>Message:</div>
-    <div><textarea name="content" placeholder="今の気分はいかがですか？"></textarea></div>
-    <div><input type="submit" value="Create" /></div>
-</form>
-{% endif %}
-
-<h2>一覧</h2>
+{% if current_user.is_authenticated %}
+         <h2>Create</h2>
+         <form action="{{ url_for('reply', message_id=message_id) }}" method="post">
+             <div>Message:</div>
+             <div><textarea name="content" placeholder="今の気分はいかがですか？"></textarea></div>
+             <div><input type="submit" value="Create" /></div>
+         </form>
+     {% endif %}
+<h2>返信一覧</h2>
 <ul>
     {% for message in messages %}
     <div class="message">
@@ -22,15 +21,11 @@
             </form>
             {% endif %}
             <div class="message-content">
-                <a href="{{ url_for('show', message_id=message.id) }}">
-                    {{ message.content }}
-                </a>
-                {% if message.messages.count() > 0 %}
-                {{ message.messages.count() }}件の返信
-                {% endif %}
+                {{ message.content }}
             </div>
         </li>
     </div>
     {% endfor %}
 </ul>
+
 {% endblock %}
